# uv_locked_frozen_reproduction

./: .gitignore  Dockerfile  pyproject.toml
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: lib.rs
src/example/: hello.py
